<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home_ngo">

    <fragment
        android:id="@+id/navigation_home_ngo"
        android:name="com.spoton.serveio.ui.NgoUser.fragment.NgoHomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_ngo_home" />

    <fragment
        android:id="@+id/navigation_tasks_ngo"
        android:name="com.spoton.serveio.ui.NgoUser.fragment.NgoTasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_ngo_tasks" />

    <fragment
        android:id="@+id/navigation_chat_ngo"
        android:name="com.spoton.serveio.ui.NgoUser.fragment.NgoChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_ngo_chat" />

</navigation>
